# cv-api-projects

./: .gitignore  README.md  pyproject.toml
data/: zone-config.json
projects/time_analysis/: README.md  config.yaml
projects/time_analysis/app/: main.py
projects/time_analysis/app/conf/: config.py  validators.py
projects/time_analysis/utils/: __init__.py  draw_zone.py
time-analysis/: config.yaml  pyproject.toml
time-analysis/app/: main.py
time-analysis/app/conf/: config.py
