[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Ryan Partridge <rpartridge101@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
time-analysis = "projects.time_analysis.main:main"

[tool.poetry.dependencies]
python = "^3.12"
supervision = "^0.23.0"
ultralytics = "^8.2.98"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
torch = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu118"
# priority = "explicit"
