[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ryan Partridge <rpartridge101@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
run-yolo = "app.main:main"
run-sam = "app.sam:main"

[tool.poetry.dependencies]
python = "^3.12"
supervision = "^0.23.0"
ultralytics = "^8.2.85"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
torch = "2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu118"
# priority = "explicit"
